[package]
name = "zjy2_icve"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.89"
base16ct = { version = "0.2.0", features = ["std", "alloc"]}
base64 = "0.22.1"
brotli = "7.0.0"
chrono = "0.4.38"
ecb = { version = "0.1.2", features = ["std"]}
hex-literal = "0.4.1"
#hex = "0.4.3"
indicatif = { version = "0.17.8", features = ["tokio"] }
lazy_static = "1.5.0"
md-5 = "0.10.6"
#md5 = "0.7.0"
reqwest = { version = "0.12.8", features = ["cookies", "gzip", "deflate", "zstd", "brotli", "json", "multipart"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
symphonia = { version = "0.5", features = ["all"] }
